JSAPI-3738: Forward and back links z-index fix

--- a/styles/style.less
+++ b/styles/style.less
@@ -539,6 +539,9 @@
                     padding-bottom: 30px;
                     }
                 }
+            .features__list-item-section_is-bottom_true {
+                position: relative;
+                }
                 .features__header {
                     margin: 0 0 13px 0;
                     font: normal 28px/34px 'SuisseIntlCond', Arial, sans-serif;
